infra/K8s/payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment #Find the pods with the label app: payment 
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: anasna/payment-service:latest

---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
spec:
  selector:
    app: payment
  ports:
    - name : payment
      protocol: TCP
      port: 8004
      targetPort: 8004
