infra/K8s/user-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user #Find the pods with the label app: user 
  template:
    metadata:
      labels:
        app: user
    spec:
      containers:
        - name: user
          image: anasna/user-service:latest

---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  selector:
    app: user
  ports:
    - name : user
      protocol: TCP
      port: 8000
      targetPort: 8000
